--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -66,37 +66,37 @@ es:
       half_a_minute: "medio minuto"
       less_than_x_seconds:
         one:  "menos de 1 segundo"
-        other: "menos de {{count}} segundos"
+        other: "menos de %{count} segundos"
       x_seconds:
         one:  "1 segundo"
-        other: "{{count}} segundos"
+        other: "%{count} segundos"
       less_than_x_minutes:
         one:  "menos de 1 minuto"
-        other: "menos de {{count}} minutos"
+        other: "menos de %{count} minutos"
       x_minutes:
         one:  "1 minuto"
-        other: "{{count}} minutos"
+        other: "%{count} minutos"
       about_x_hours:
         one:  "alrededor de 1 hora"
-        other: "alrededor de {{count}} horas"
+        other: "alrededor de %{count} horas"
       x_days:
         one:  "1 día"
-        other: "{{count}} días"
+        other: "%{count} días"
       about_x_months:
         one:  "alrededor de 1 mes"
-        other: "alrededor de {{count}} meses"
+        other: "alrededor de %{count} meses"
       x_months:
         one:  "1 mes"
-        other: "{{count}} meses"
+        other: "%{count} meses"
       about_x_years:
         one:  "alrededor de 1 año"
-        other: "alrededor de {{count}} años"
+        other: "alrededor de %{count} años"
       over_x_years:
         one:  "más de 1 año"
-        other: "más de {{count}} años"
+        other: "más de %{count} años"
       almost_x_years:
         one: "casi 1 año"
-        other: "casi {{count}} años"
+        other: "casi %{count} años"
     prompts:
       year:   "Año"
       month:  "Mes"
@@ -109,8 +109,8 @@ es:
     errors:
       template:
         header:
-          one:   "No se pudo guardar este/a {{model}} porque se encontró 1 error"
-          other:  "No se pudo guardar este/a {{model}} porque se encontraron {{count}} errores"
+          one:   "No se pudo guardar este/a %{model} porque se encontró 1 error"
+          other:  "No se pudo guardar este/a %{model} porque se encontraron %{count} errores"
         # The variable :count is also available
         body: "Se encontraron problemas con los siguientes campos:"
 
@@ -124,23 +124,23 @@ es:
         accepted: "debe ser aceptado"
         empty: "no puede estar vacío"
         blank: "no puede estar en blanco"
-        too_long: "es demasiado largo ({{count}} caracteres máximo)"
-        too_short: "es demasiado corto ({{count}} caracteres mínimo)"
-        wrong_length: "no tiene la longitud correcta ({{count}} caracteres exactos)"
+        too_long: "es demasiado largo (%{count} caracteres máximo)"
+        too_short: "es demasiado corto (%{count} caracteres mínimo)"
+        wrong_length: "no tiene la longitud correcta (%{count} caracteres exactos)"
         taken: "ya está en uso"
         not_a_number: "no es un número"
-        greater_than: "debe ser mayor que {{count}}"
-        greater_than_or_equal_to: "debe ser mayor que o igual a {{count}}"
-        equal_to: "debe ser igual a {{count}}"
-        less_than: "debe ser menor que {{count}}"
-        less_than_or_equal_to: "debe ser menor que o igual a {{count}}"
+        greater_than: "debe ser mayor que %{count}"
+        greater_than_or_equal_to: "debe ser mayor que o igual a %{count}"
+        equal_to: "debe ser igual a %{count}"
+        less_than: "debe ser menor que %{count}"
+        less_than_or_equal_to: "debe ser menor que o igual a %{count}"
         odd: "debe ser impar"
         even: "debe ser par"
-        record_invalid: "La validación falló: {{errors}}"
+        record_invalid: "La validación falló: %{errors}"
         # Append your own errors here or at the model/attributes scope.
 
       full_messages:
-        format: "{{attribute}} {{message}}"
+        format: "%{attribute} %{message}"
 
       models:
         # Overrides default messages
@@ -245,18 +245,18 @@ es:
       unlock_instructions: 'Instrucciones para desbloquear tu cuenta'
     mailer_views:
       confirmation_instructions:
-        welcome: "¡Bienvenido {{email}}!"
+        welcome: "¡Bienvenido %{email}!"
         text: "Puede confirmar su cuenta ingresando en el siguiente link:"
         link: "Confirmar mi cuenta"
       reset_password_instructions:
-        welcome: "Hola {{email}}!"
+        welcome: "Hola %{email}!"
         text_top: "Alguien ha requerido un cambio de contraseña en su cuenta, puede hacerlo ingresando al siguiente link:"
         text_bottom1: "Si usted no realizo este pedido por favor ignore este email."
         text_bottom2: "Su contraseña no será modificado hasta que ingrese y lo modifique."
         link: "Cambiar mi contraseña"
       invitation:
-        welcome: "Hola {{email}}!"
-        text_top: "Ha sido invitado a {{root_url}}, puedes aceptar tu invitación ingresando al siguiente link:"
+        welcome: "Hola %{email}!"
+        text_top: "Ha sido invitado a %{root_url}, puedes aceptar tu invitación ingresando al siguiente link:"
         link: "Aceptar invitación"
         text_bottom1: "Si no desea aceptar la invitación, puede ignorar este email."
         text_bottom2: "Su cuenta no será creada hasta que ingrese y configure su contraseña."
@@ -352,12 +352,12 @@ es:
       subscription_tab_title: "Suscripción"
     subscription_tab:
       no_credit_card: "(no hay tarjeta)"
-      card_expiration_date: "Vencimiento: {{date}}"
+      card_expiration_date: "Vencimiento: %{date}"
       transaction_history: "Historia"
       transaction_failed: "FRACASO"
       card: "tarjeta"
   practice:
-    time_format: "{{minutes}} minutos {{seconds}} segundos"
+    time_format: "%{minutes} minutos %{seconds} segundos"
     help:
       name: "El nombre que desea darle a su práctica."
       description: "Una descripción de su práctica."
@@ -403,13 +403,13 @@ es:
     sign_out: "Salir"
     sign_up: "Registrarse"
     sign_in: "Entrar"
-    signed_in_as: "Conectado como {{email}}."
-    signup_or_siginin: "{{signup}} o {{signin}}"
+    signed_in_as: "Conectado como %{email}."
+    signup_or_siginin: "%{signup} o %{signin}"
     credits: "Créditos"
     profile: "Perfil"
   application:
-    account_past_due: "Su cuenta esta por vencer. Tiene {{days}} días restantes para realizar el pago."
-    account_due: "Su cuenta vence en {{days}} días."
+    account_past_due: "Su cuenta esta por vencer. Tiene %{days} días restantes para realizar el pago."
+    account_due: "Su cuenta vence en %{days} días."
     pay_now_url: "https://www.paypal.com/es_XC/i/btn/btn_paynowCC_LG.gif"
   shared_subscription_tab:
     current_plan_mark: "(actual)"
@@ -432,5 +432,5 @@ es:
       title: "¡Comience ahora!"
       text: "¡Si usted practica Yôga, o enseña profesionalmente, registrese ahora y comience a organizar sus prácticas!"
       button: "¡Comience ahora!"
-    find_us_on_fb_html: "O encuentrenos en {{facebook}}"
-    follow_us_on_twitter_html: "Síganos en {{twitter}}"
+    find_us_on_fb_html: "O encuentrenos en %{facebook}"
+    follow_us_on_twitter_html: "Síganos en %{twitter}"
