help message on calendar

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -323,6 +323,7 @@ es:
   practice_events:
     index:
       new_practice_event: "Nuevo evento"
+      create_practice_tip: "Cree un nuevo evento en el calendario haciendo click en el boton 'Nuevo evento'."
     paid_account_notice: "Necesita una suscripción paga para acceder al calendario. %{upgrade_link}"
   shared:
     credits_dialog:
