--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,7 +96,7 @@ en:
       new_practice: "New Practice"
       my_practices: "My practices"
       new_invitation: "Invite a friend"
-      create_practice_tip: "Create a new practice by clicking on the button 'New practice'."
+      create_practice_tip: "Create a new practice by clicking on the 'New practice' button."
     show:
       loading: "Loading..."
       practice_parts:
@@ -243,6 +243,7 @@ en:
   practice_events:
     index:
       new_practice_event: "New event"
+      create_practice_tip: "Create a new event on the calendar by clicking on the 'New event' button."
     paid_account_notice: "You require a paid subscription to access the calendar functionality. %{upgrade_link}"
   practice_part:
     help:
