--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -293,3 +293,5 @@ en:
       create_contact_tip: "Create a new contact! click on the 'New contact' button."
   practice_shares:
     paid_account_notice: "Your current subscription does not allow sharing practices. %{upgrade_link}"
+    share_practice_dialog:
+      viewers: 'Viewers'
