--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -501,3 +501,5 @@ es:
       create_contact_tip: "Cree un nuevo contacto! Haga click en el boton 'Nuevo contacto'."
   practice_shares:
     paid_account_notice: "Su suscripción actual no permite compartir prácticas. %{upgrade_link}"
+    share_practice_dialog:
+      viewers: 'Visores'
