only share owned practices

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -295,3 +295,4 @@ en:
     paid_account_notice: "Your current subscription does not allow sharing practices. %{upgrade_link}"
     share_practice_dialog:
       viewers: 'Viewers'
+    not_owner_notice: "You can only share the practices you own."
