--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -503,3 +503,4 @@ es:
     paid_account_notice: "Su suscripción actual no permite compartir prácticas. %{upgrade_link}"
     share_practice_dialog:
       viewers: 'Visores'
+    not_owner_notice: "Solo puede compartir sus propias prácticas."
