--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -327,6 +327,7 @@ es:
     edit_practice_dialog:
       info_tab_title: "Editar datos"
       play_preferences_tab_title: "Preferencias de ejecución"
+    not_owner_notice: "Las prácticas solo pueden ser editadas por su dueño."
   practice_events:
     index:
       new_practice_event: "Nuevo evento"
