--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -302,3 +302,9 @@ en:
     not_owner_notice: "You can only share the practices you own."
     dialog_form:
       sadhana_contacts: "Sádhana Contacts"
+  share_mailer:
+    share_notification:
+      hello: "Hello %{email}!"
+      text_top: "I have shared a practice with you using %{root_url}. You can see it by clicking on the link below:"
+      link: "Play shared practice"
+      invitation: "If you still didn't accept the invitation, click on the link below to setup your password:"
