--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -505,7 +505,7 @@ es:
   practice_shares:
     paid_account_notice: "Su suscripción actual no permite compartir prácticas. %{upgrade_link}"
     share_practice_dialog:
-      viewers: 'Visores'
+      viewers: 'Compartido con'
       select_sadhana_contacts: "O de sus %{sadhana_contacts}."
     not_owner_notice: "Solo puede compartir sus propias prácticas."
     dialog_form:
