--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -516,3 +516,4 @@ es:
       text_top: "He compartido una práctica contigo usando %{root_url}. Puedes verla haciendo click en el link:"
       link: "Reproducir práctica compartida"
       invitation: "Si todavia no aceptaste la invitación, haz click en el siguiente link para configurar tu contraseña:"
+      subject: "He compartido una práctica contigo"
