--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -335,6 +335,7 @@ es:
     not_owner_notice: "Las prácticas solo pueden ser editadas por su dueño."
     practice:
       owner: "por %{owner}"
+      shared_practice_deleted: "Atención! Esta práctica fue eliminada por su dueño."
     destroy:
       undo_notice: "Su práctica fue eliminada, puede %{undo_link} esta acción o %{destroy_link} su práctica."
     update:
