--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -311,6 +311,7 @@ es:
       my_practices: "Mis prácticas"
       new_invitation: "Invitar a un amigo"
       create_practice_tip: "Cree una nueva práctica haciendo click en el boton 'Nueva práctica'."
+      deleted_practices: "Prácticas eliminadas"
     paid_account_notice:
       one: "Su suscripción solo permite trabajar con %{count} práctica. %{upgrade_link}"
       other: "Su suscripción solo permite trabajar con %{count} prácticas. %{upgrade_link}"
